namespaces/live.cloud-platform.service.justice.gov.uk/em-data/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "em-data"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "em-data-for-probation-officers"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "data for probation: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/em-data"
    cloud-platform.justice.gov.uk/team-name: "em-data-proto"
    cloud-platform.justice.gov.uk/review-after: ""
